# vicar-gdalplugin

./: Makefile.am  Makefile.in  README  README_RPM  aclocal.m4  configure  configure.ac  vicar-gdalplugin.spec  vicar_gdalplugin.am
config/m4/: ac_boost.m4  ac_check_found.m4  ac_gdal.m4  afids_common.m4  vicar_gdalplugin_source_directory.m4
src/: geotiff_file.cc  geotiff_file.h  vicar_dataset.cc  vicar_dataset.h  vicar_file.cc  vicar_file.h  vicar_gdal.cc  vicar_gdal_exception.h  vicar_ogr.cc  vicar_ogr.h  vicar_raster_band.cc  vicar_raster_band.h
